--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!--header area-->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <img src="panda-commerce-bootstrap-main/images/logo.png">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -92,7 +92,71 @@
     </header>
     <main>
         <section>
-
+            <div class="container py-5">
+                <div class="row g-4">
+                    <div class="col-4">
+                        <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                            <h1>Watch</h1>
+                            <img class="w-25 h-25" src="panda-commerce-bootstrap-main/images/categories/watch.png">
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="p-3 border bg-danger d-flex align-items-center justify-content-between rounded-3">
+                            <h1>Bag</h1>
+                            <img class="w-25 h-25" src="panda-commerce-bootstrap-main/images/categories/bag.png">
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                            <h1>Shoes</h1>
+                            <img class="w-25 h-25" src="panda-commerce-bootstrap-main/images/categories/shoes.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <h1>Shoes</h1>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card shadow-lg rounded-3" style="width: 22rem;">
+                        <img src="panda-commerce-bootstrap-main/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to
+                                additional.</p>
+                            <h4>$120</h4>
+                            <a href="#" class="btn btn-danger">Buy Now >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card shadow-lg rounded-3" style="width: 22rem;">
+                        <img src="panda-commerce-bootstrap-main/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h4>$320</h4>
+                            <a href="#" class="btn btn-danger">Buy Now >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card shadow-lg rounded-3" style="width: 22rem;">
+                        <img src="panda-commerce-bootstrap-main/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional.
+                            </p>
+                            <h4>$500</h4>
+                            <a href="#" class="btn btn-danger">Buy Now >></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
